<?xml version="1.0"?>
<package format="3">
  <name>ros_graph_parser</name>
  <version>0.0.1</version>
  <description>parser of ros graph</description>

  <maintainer email="led@ipa.fraunhofer.de">LED</maintainer>

  <license>Apache 2.0</license>

  <author email="led@ipa.fraunhofer.de">LED</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>

  <export>

  </export>
</package>
